--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
 
-    <sectioan class="main-head">
+    <section class="main-head">
         <div class="container">
             <div class="header-main">
                 <div class="logo-akadem">
                     <a href="#"><img src="photo/akademnashr-logo.svg" alt="logo-akademnashr"></a>
-                    <h1><a href="#">Akadem<span>nashr</a></span></h1>
+                    <h1><a href="#">Akadem<span>nashr</span></a></h1>
                 </div>
                 <div class="head-menu">
                     <ul class="menu-title">
@@ -34,7 +34,7 @@
                 </a>
             </div>
         </div>
-    </sectioan>
+    </section>
 
 
     <!-- main-head-over -->
@@ -110,7 +110,10 @@
         <div class="container">
             <div class="action-box">
                 <div class="action-left">
-                    <h1>Bolalar kitoblari uchun ajoyib aksiya!</h1>
+
+                    <h1>
+                        Bolalar kitoblari uchun ajoyib aksiya!
+                    </h1>
                     <p>
                         Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar. 
                     </p>
@@ -138,7 +141,7 @@
             <div class="logo-anons">
                 <div class="logo-title">
                     <a href="#"><img src="photo/akademnashr-logo.svg" alt="logo-akademnashr"></a>
-                    <h1><a href="#">Akadem<span>nashr</a></span></h1>
+                    <a href="#"><h1>Akadem <span>nashr</span></h1></a>
                 </div>
                 <div class="icon-logo">
                     <a href="#"><i class="fa fa-telegram fa-2x"></i></a>
